<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginStart="15dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_download" />


    <TextView
        android:id="@+id/whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/set_as_status"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_set_as" />


    <TextView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/share"
        android:textColor="@color/white"
        app:drawableTopCompat="@drawable/ic_share_saved" />

</LinearLayout>