<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/tv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/montserratbold"
        android:text="@string/download"
        android:textColor="@color/download_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/saved_successfully"
        android:textAlignment="center"
        android:textColor="@color/download_color"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ok"
        app:layout_constraintEnd_toEndOf="@id/tv_download"
        app:layout_constraintStart_toStartOf="@id/tv_download"
        app:layout_constraintTop_toBottomOf="@id/tv_download" />

    <!--    <com.google.android.material.card.MaterialCardView-->
    <!--        android:id="@+id/card"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/tv_saved"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/ad_dialog"-->
    <!--        android:layout_marginStart="@dimen/_30sdp"-->
    <!--        android:layout_marginEnd="@dimen/_30sdp"-->
    <!--        app:cardCornerRadius="@dimen/_5sdp"-->
    <!--        app:strokeWidth="3dp"-->
    <!--        app:strokeColor="@color/white">-->
    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent">-->

    <ImageView
        android:id="@+id/saved_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@id/ad_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_saved" />

    <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

    <!--    </com.google.android.material.card.MaterialCardView>-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_5sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserratbold"
        android:text="@string/ok"
        android:textColor="@color/download_color"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go_to_collection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/montserratbold"
        android:text="@string/go_to_collection"
        android:textColor="@color/download_color"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_ok" />

    <LinearLayout
        android:id="@+id/ad_dialog"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_go_to_collection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saved_img">

        <!--        <include-->
        <!--            layout="@layout/ad_container"/>-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>