<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp">

                <RelativeLayout
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/galleryImageView"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                    <ImageView
                        android:id="@+id/cakeImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/loading_img" />


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/action_cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/bg_col"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/chooseImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/choose_image"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:drawableTopCompat="@drawable/addbg" />

                    <TextView
                        android:id="@+id/btnShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:drawablePadding="@dimen/_2sdp"
                        android:gravity="center"
                        android:text="@string/share_frame"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:drawableTopCompat="@drawable/share_frame" />

                    <TextView
                        android:id="@+id/addText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/add_text_btn_ttl"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:drawableTopCompat="@drawable/addtext" />

                    <TextView
                        android:id="@+id/addStickers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/add_stickers_btn_ttl"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:drawableTopCompat="@drawable/stickers" />

                    <TextView
                        android:id="@+id/download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/download_image"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="10sp"
                        app:drawableTopCompat="@drawable/save_frame" />

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/nativeAd"
            layout="@layout/native_ad_container" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
